(update): Adding content into index and mini css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Home Cooked Conversations</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mini.css/3.0.1/mini-default.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <!--[if IE]>
+            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+
+    </head>
+    <body id="home">
+        <header>
+
+            <h1><a href="/index.html" title="Go to Home Cooked Convos"><i class="logo"><u>Home Cooked Convo's Logo</u></i></a></h1>
+            <nav class="home-nav">
+                <ul>
+                    <li><a href="/gallery.html">Gallery</a></li>
+                    <li><a href="/videos.html">Videos</a></li>
+                    <li><a href="/shop.html">Shop</a></li>
+                    <li><a href="/newsletter.html">Newsletter</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main class="main">
+            <p>            HOME
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias maxime dolores deleniti illum facilis eos repellat animi inventore laudantium adipisci fuga nisi, veniam itaque voluptatibus veritatis doloribus ipsam eius sunt.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id repudiandae ipsum doloremque excepturi nulla similique, odio, rem voluptatem commodi eligendi magni quisquam culpa esse dolorem tempore omnis suscipit fugiat assumenda.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis soluta temporibus, repellat quod excepturi, quae beatae ducimus adipisci nesciunt ipsam sunt praesentium eum amet, odit laboriosam facilis molestiae unde consequatur.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem architecto eligendi veritatis voluptas rerum, aut commodi dolore veniam quod maxime neque! Dolorem porro ea consequatur molestiae tempora ratione asperiores et?
+            </p>
+
+        </main>
+        <footer>
+            <section class="contact" vocab="http://schema.org/" typeof="LocalBusiness">
+                <h2>Contact us!</h2>
+                <address property="email">
+                    <a href="mailto:us@example.com">us@example.com</a>
+                </address>
+                <address property="address" typeof="PostalAddress">
+                    <p property="streetAddress">123 Main St., Suite 404</p>
+                    <p>
+                        <span property="addressLocality">Yourtown</span>,
+                        <span property="addressRegion">AK</span>,
+                        <span property="postalCode">12345</span>   
+                    </p>
+                    <p property="addressCountry">United States of America</p>
+                </address>
+            </section>
+        </footer>
+    </body>
+</html>
